--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-datepicker": "^6.9.0",
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.11",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.2",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.8.0",
     "eslint": "^8",
